--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,15 @@
             <li>
               <a href="index.html" class="active">Home</a>
             </li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li>
+              <a href="about.html">About</a>
+            </li>
+            <li>
+              <a href="services.html">Services</a>
+            </li>
+            <li>
+              <a href="contact.html">Contact</a>
+            </li>
           </ul>
         </nav>
         <button class="nav-toggle" aria-label="Toggle navigation">
